weasel/weasel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weasel-ingress
  namespace: weasel
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # ALB를 인터넷에 노출
    alb.ingress.kubernetes.io/target-type: ip # ALB가 IP 모드로 동작하도록 설정 (ip -> 트래픽을 Pod IP로 직접 라우팅)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]' # ALB의 HTTP와 HTTPS 리스너 포트 설정
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP # ALB의 헬스체크 프로토콜 설정
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port # 헬스체크를 수행할 포트를 서비스가 사용하는 포트로 설정
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:393035689023:certificate/b8c36a56-d516-40fb-bd34-adf402eec348 # HTTPS에 사용할 인증서의 ARN을 지정
    alb.ingress.kubernetes.io/group.name: "weasel"
    # alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=my-access-log-bucket,access_logs.s3.prefix=my-app # ALB의 로드 밸런서 속성을 설정합니다. 여기서는 접속 로그를 S3에 저장하는 설정
spec:
  ingressClassName: alb
  rules:
    # - host: weasel.kkamji.com
    #   http:
    #     paths:
    #       - path: /*
    #         pathType: ImplementationSpecific
    #         backend:
    #           service:
    #             name: weasel-frontend-service
    #             port:
    #               number: 80
    - host: weasel-backend.kkamji.net
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: weasel-backend-service
                port:
                  number: 8080
